--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,254 @@
-# Add the missing important patterns from your comprehensive .gitignore
-@"
+# =============================================================================
+# ONE BARN AI - COMPREHENSIVE .GITIGNORE
+# =============================================================================
+
+# Dependencies and Package Managers
 node_modules/
-.env
-.env.*
-*.tsbuildinfo
-*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.pnpm-store/
+*.lock
+!package-lock.json
+
+# Build Outputs
 dist/
 build/
-*.tmp
-*.mermaid
-debug-*.html
+.cache/
+out/
+
+# Build Artifacts and Cache
+*.tsbuildinfo
+*.buildinfo
+.turbo/
+.next/
+.nuxt/
+.vite/
+vite.config.js.timestamp-*
+
+# =============================================================================
+# SECURITY CRITICAL - ENVIRONMENT & CREDENTIALS
+# =============================================================================
+
+# Environment files (NEVER commit actual credentials)
+.env
+.env.*
+!.env.template
+!.env.example
+
+# Docker files (may contain credentials)
+docker-compose.yml
 docker-compose.*.yml
+!docker-compose.example.yml
+
+# API Keys and Secrets
+*.pem
+*.key
+*.crt
+secrets/
+credentials/
+
+# =============================================================================
+# DEVELOPMENT ARTIFACTS
+# =============================================================================
+
+# Development Documentation (keep only essential docs)
 *TEST*.md
 *DEMO*.md
+*DEBUG*.md
 *CLEANUP*.md
+*AUTHENTICATION*.md
 *MAPPING*.md
+debug-*.html
+debug-*.js
+
+# Development Tools and Diagrams
+*.mermaid
+tools/
+debug/
+
+# Backup and Old Files
+*.old
+*.backup
+*.bak
 old.*
-# Large media files
+backup.*
+
+# Temporary Files
+*.tmp
+*.temp
+temp/
+tmp/
+
+# =============================================================================
+# LARGE ASSETS AND MEDIA
+# =============================================================================
+
+# Large Video Files (training/demo content)
 *.mp4
 *.mov
 *.avi
+*.mkv
+*.wmv
+*.flv
 *.webm
+# Exception: keep small demo videos if needed
+!demo-small.mp4
+!preview.mp4
+
+# Training Data and Test Images
+public/images/frames/
+training-data/
+test-images/
+validation-assets/
+
+# Large Image Files
 *.psd
 *.ai
 *.sketch
 *.fig
 *.xd
-# Specific directories
-public/images/frames/
-public/video/
-# Exceptions for small logos
+# Exception: keep small logos/icons
 !*logo*.png
 !*icon*.png
 !*favicon*.png
-"@ | Out-File -FilePath .gitignore -Encoding UTF8
+
+# =============================================================================
+# DEVELOPMENT TOOLS
+# =============================================================================
+
+# IDE and Editor Files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+
+# VS Code specific
+.vscode/settings.json
+.vscode/launch.json
+.vscode/extensions.json
+
+# =============================================================================
+# OPERATING SYSTEM FILES
+# =============================================================================
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.directory
+.Trash-*
+
+# =============================================================================
+# LOGS AND MONITORING
+# =============================================================================
+
+# Log Files
+*.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime and Process Files
+*.pid
+*.seed
+*.pid.lock
+
+# =============================================================================
+# TESTING AND COVERAGE
+# =============================================================================
+
+# Test Coverage
+coverage/
+*.lcov
+.nyc_output/
+
+# Test Results
+test-results/
+junit.xml
+
+# =============================================================================
+# DEPLOYMENT AND CI/CD
+# =============================================================================
+
+# Deployment artifacts
+.vercel/
+.netlify/
+.render/
+
+# CI/CD
+.github/workflows/temp*
+.circleci/temp*
+
+# =============================================================================
+# SPECIFIC TO ONE BARN AI PROJECT
+# =============================================================================
+
+# AI Model Files (if any)
+*.model
+*.pkl
+*.h5
+*.pb
+models/
+
+# Camera and Video Processing
+rtsp-cache/
+video-cache/
+stream-cache/
+
+# Wyze Integration
+wyze-config/
+tokens/
+wyze-cache/
+
+# =============================================================================
+# UTILITIES AND HELPERS
+# =============================================================================
+
+# Package manager files
+.yarn/
+.pnp.*
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# =============================================================================
+# COMMENTS FOR MAINTENANCE
+# =============================================================================
+
+# This .gitignore is comprehensive and designed for One Barn AI project
+# If you need to track any ignored files, add exceptions using !filename
+# Regular maintenance: Review and update patterns as project evolves
+# Security: Never commit real credentials, API keys, or sensitive data
